# CMakeList.txt : CMake project for CMakeProject1, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("fin_task_26_9_1")

# Add source to this project's executable.
add_executable (fin_task_26_9_1 "main.cpp" )


# TODO: Add tests and install targets if needed.
